--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
+<head>
+  <title>Teste</title>
+</head>
+<body>
+  <h1>FUNCIONANDO!</h1>
+</body>
+</html>
