--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-  <title>Teste</title>
+  <meta charset="UTF-8">
+  <title>Guematria Viva</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>FUNCIONANDO!</h1>
+
+  <div class="container">
+    <h1>Guematria Viva</h1>
+
+    <input type="text" id="nomeInput" placeholder="Digite um nome">
+
+    <button onclick="calcularGuematria()">Calcular</button>
+
+    <div id="resultado"></div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
